--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://baalbeker.github.io/photoscope",
-  "name": "energize",
+  "name": "photoscope",
   "private": true,
   "version": "0.0.0",
   "type": "module",
