--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
+    "browser-image-compression": "^2.0.2",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.4.0",
     "install": "^0.13.0",
