--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
+    "axios": "^1.7.9",
     "browser-image-compression": "^2.0.2",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.4.0",
@@ -23,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-jsx-parser": "^2.2.2",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3"
   },
